[package]
authors = ["MetaMuffin <metamuffin@yandex.com>"]
edition = "2018"
name = "cald"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
users = "*"
unix_socket = "*"
lazy_static = "*"
dirs = "*"
ctrlc = "*"
derive_more = "*"